--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=p, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>novueau document</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <h1>TITRE</h1>
 
     <button>
-        
+        button
     </button>
 </body>
 </html>
