--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=p, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>novueau document</title>
 </head>
 <body>
-    <p>TEST Léa</p>
+  
+    <h1>TITRE</h1>
+
+    <button>
+        button
+    </button>
 </body>
 </html>
