--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=p, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css"/>
     <link rel="stylesheet" href="css/main.css">
     <title>novueau document</title>
 </head>
 <body>
   
     <h1>TITRE</h1>
+
+    <button id="ajouter">+</button>
+
+    <button id="retirer">-</button>
+
 
     <button>
         button
