--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=p, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css"/>
-    <link rel="stylesheet" href="css/main.css">
-    <title>novueau document</title>
+    
+    <title>Herman Miller Gaming</title>
 </head>
 <body>
   
     <h1>TITRE</h1>
 
-    <button id="ajouter">+</button>
+    <button> + </button>
 
-    <button id="retirer">-</button>
+    <button> - </button>
 
-
-    <button>
-        button
-    </button>
 </body>
 </html>
