liste de trois icones
test ajout de trois icônes, début de création d'un menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
     <button> + </button>
 
     <button> - </button>
-
-    <img src="icones/user.png">
+    <ul>
+        <li>
+            <img class="icone" src="icones/recherche.png">
+        </li>
+        <li>
+            <img class="icone" src="icones/panier.png">
+        </li>
+        <li>
+            <img class="icone" src="icones/user.png">
+        </li>
+    </ul>
+    
 </body>
 </html>
