--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <ul>
         <li>
-            <img class="icone" src="icones/recherche.png">
+            <img class="icone" src="icones/recherche.svg">
         </li>
         <li>
-            <img class="icone" src="icones/panier.png">
+            <img class="icone" src="icones/panier.svg">
         </li>
         <li>
-            <img class="icone" src="icones/user.png">
+            <img class="icone" src="icones/user.svg">
         </li>
     </ul>
     
