Ajout de la fonction math (px to rem)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   
-    <h1>TITRE</h1>
+    <h1 class="title">TITRE</h1>
+    <p class="textBody">Test</p>
 
     <button> + </button>
 
