correction icones dans index
ajout des classes menu__item dans les <li>

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <li class="menu__item">
                 <img class="menu__icone" src="icones/recherche.svg">
             </li>
-            <li>
+            <li class="menu__item">
                 <img class="menu__icone" src="icones/panier.svg">
             </li>
-            <li>
+            <li class="menu__item">
                 <img class="menu__icone" src="icones/user.svg">
             </li>
         </ul>
