--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <button> + </button>
 
     <button> - </button>
+    
+<div class="check">
+    <input type="checkbox" id="checkbox" />
+    <label for="checkbox"></label>
+</div>
 
     <nav class="menu">
         <ul class="menu__list">
