Ajout d'une page test

--- a/index.html
+++ b/index.html
@@ -3,40 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=p, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css"/>
-    
-    <title>Herman Miller Gaming</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  
-    <h1 class="title">TITRE</h1>
-    <p class="textBody">Test</p>
-
-    <button> + </button>
-
-    <button> - </button>
-
-    <nav class="menu">
-        <ul class="menu__list">
-            <li class="menu__item">
-                <img class="menu__icone" src="images/icones/recherche.svg">
-            </li>
-            <li class="menu__item">
-                <img class="menu__icone" src="images/icones/panier.svg">
-            </li>
-            <li class="menu__item">
-                <img class="menu__icone" src="images/icones/user.svg">
-            </li>
-        </ul>
-    </nav>
-
     
-
-    <form action="" class="form">
-      <label for="nom" class="form__label">Nom</label>
-      <input type="text" name="nom" class="form__input">
-    </form>
-
 </body>
 </html>
