--- a/test.html
+++ b/test.html
@@ -20,16 +20,18 @@
     <nav class="menu">
         <ul class="menu__list">
             <li class="menu__item">
-                <img class="menu__icone" src="images/icones/recherche.svg">
+                <img class="menu__icone" src="sources/icones/recherche.svg">
             </li>
             <li class="menu__item">
-                <img class="menu__icone" src="images/icones/panier.svg">
+                <img class="menu__icone" src="sources/icones/panier.svg">
             </li>
             <li class="menu__item">
-                <img class="menu__icone" src="images/icones/user.svg">
+                <img class="menu__icone" src="sources/icones/user.svg">
             </li>
         </ul>
     </nav>
+
+    <button class="bouton">bouton</button>
 
     
 
