ajout des boutons 'suivant' et 'précèdent'
Ajout des boutons dans index avec leur style associé

--- a/test.html
+++ b/test.html
@@ -32,6 +32,8 @@
     </nav>
 
     <button class="bouton">bouton</button>
+    <button class="bouton -suivant">bouton</button>
+    <button class="bouton -precedent">bouton</button>
 
     
 
