--- a/test.html
+++ b/test.html
@@ -38,5 +38,10 @@
       <input type="text" name="nom" class="form__input">
     </form>
 
+    <div class="colorCheck">
+        <input type="checkbox" id="checkbox">
+        <label for="checkbox"></label>
+    </div>
+
 </body>
 </html>
